--- a/src/components/Dice/Dice.module.scss
+++ b/src/components/Dice/Dice.module.scss
@@ -4,13 +4,13 @@
   align-items: center;
   width: 50px;
   height: 50px;
-  border: 1px solid #000;
+  border: 1px solid #555;
   border-radius: 5px;
   font-family: 'Rubik', sans-serif;
   font-size: x-large;
-  color: #fff;
-  background: rgb(134,134,134);
-  background: linear-gradient(45deg, rgba(134,134,134,1) 0%, rgba(221,221,221,1) 31%, rgba(242,242,242,1) 51%, rgba(236,236,236,1) 74%, rgba(195,195,195,1) 100%);
+  color: #f5f5f5;
+  text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
+  background: #f5f5f5;
   -webkit-box-shadow: 1px 1px 3px 0px #8D8D8D; 
   box-shadow: 1px 1px 3px 0px #8D8D8D;
 
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #000;
+    border: 1px solid #555;
     border-radius: 5px;
     width: 45px;
     height: 45px;
