--- a/src/components/DiceContainer/DiceContainer.module.scss
+++ b/src/components/DiceContainer/DiceContainer.module.scss
@@ -4,10 +4,16 @@
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-  width: 300px;
+
+  width: calc(100% - 40px);
   padding: 30px 20px;
   border: 1px solid #ddd;
   border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+
+  @media (min-width: 768px) {
+    width: 300px;
+  }
 }
 
 .tray {
