--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,3 @@
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -12,6 +5,7 @@ main {
   align-items: center;
   gap: 10px;
 
+  margin: 20px 10px;
   padding: 30px 20px;
   border: 1px solid #ddd;
   border-radius: 20px;
@@ -46,8 +40,8 @@ main {
   justify-content: center;
   align-items: center;
   gap: 20px;
-  width: calc(100% - 40px);
-  padding: 20px;
+  width: calc(100% - 20px);
+  padding: 20px 10px;
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.8);
